--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,12 +1,12 @@
 body {
   margin: 0;
   padding: 0;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-width: 320px;
-  min-height: 100vh;
   background-color: var(--background-color); /* Si tienes un color de fondo definido */
 }
 
