--- a/frontend/src/components/SurveyQuestion.css
+++ b/frontend/src/components/SurveyQuestion.css
@@ -38,7 +38,7 @@ h2 {
     margin-bottom: 20px;
 }
 
-.options {
+.survey-options {
     margin-top: 20px;
     display: flex;
     flex-direction: column;
